# alacritty-conf

./: Cargo.toml  gen.py  orig.yml
src/: config.rs  main.rs  theme.rs
