[package]
name = "alacritty-conf"
version = "0.1.0"
authors = ["yusuf"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
rgb = "0.8.20"
hex = "0.4.2"
dirs = "3.0.1"
chrono = "0.4.13"
yaml-rust = "0.4.4"
termcolor = "1.1.0"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
